PM: Port fingprintd quick thaw from OnePlus
Pixel 2 XL's process is named fingerprint, not fingerprintd,
so adjust accordingly. Don't say I'm wrong, try to pgrep
fingerprintd first.

Signed-off-by: Joe Maples <joe@frap129.org>

--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -321,3 +321,8 @@ config PM_GENERIC_DOMAINS_OF
 
 config CPU_PM
 	bool
+
+config QUICK_THAW_FINGERPRINTD
+	bool "Quickly resume fingerprintd"
+	depends on SUSPEND
+	default y
