--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,7 @@ all.config
 
 # Kdevelop4
 *.kdev4
+
+# firmware/synaptics
+firmware/synaptics/shenchao_td4310_miui_whyred.img
+firmware/synaptics/tianma_td4310_miui_whyred.img
