fingerprint: fpc depends on state notifier

--- a/drivers/input/fingerprint/Kconfig
+++ b/drivers/input/fingerprint/Kconfig
@@ -7,6 +7,7 @@ config FINGERPRINT_GOODIX
 
 config FINGERPRINT_FPC1020
 	tristate "goodix gf5216 fingerprint drvier support"
+	depends on STATE_NOTIFIER
 	help
 	  say y here to enable goodix fingerprint driver support!
 
